<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SharpFix Android</string>
    <string name="logOut">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Service">Service Control</string>
    <string name="Logs">Logs</string>
    <string name="Check">Check Logs</string>
    <string name="Delete">Delete Logs</string>
    <string name="dScanner">Directory Scanner Service</string>
    <string name="fdService">File Designation Service</string>
    <string name="fddService">File Duplication Detection Service</string>    
    <string name="logo">SharpFix Android File Administration Utility</string>    
    <string name="usr">Username</string>    
    <string name="pass">Password</string>    
    <string name="autoLogin">Enable Autologin</string>    
    <string name="login">Login</string>    
    <string name="noAccount">No current account has been detected! Please create an account first before using SharpFix Android File Administration Utility</string>    
    <string name="createAccount">Create Account</string>    
    <string name="desiredLogin">Desired Username</string>    
    <string name="desiredPassword">Desired Password</string>    
    <string name="confirmPassword">Confirm Password</string>    
    <string name="footer">IDcLxViI - Codesix 2014</string>    
    <string name="mainMenuTitle">Main Menu</string>   
    <string name="mainMenuFddSelection">File Duplication Detection</string>   
    <string name="mainMenuFddLabel">Settings on file(s) with exactly similar contents in the SD-Card directory.</string>   
    <string name="mainMenuFdSelection">File Designation</string>    
    <string name="mainMenuFdLabel">Settings on files with specific type.</string>   
    <string name="mainMenuFiltersSelection">Filters</string>    
    <string name="mainMenuFiltersLabel">Settings on files and/or directories to be ignored by SharpFix.</string>    
    <string name="mainMenuServicesSelection">Services</string>    
    <string name="mainMenuServicesLabel">Settings on SharpFix\'s background activities.</string>
    <string name="mainMenuAboutSelection">About</string>    
    <string name="mainMenuAboutLabel">About SharpFix</string>
    
    <string name="checkBoxFDD">Enable Automatic Deletion</string>    
    <string name="checkBoxFDDLabel">Automatically delete duplicate files detected by SharpFix</string>    
    <string name="subMenuFddDeletionPrio">Duplicate Files Deletion Priority</string>    
    <string name="subMenuFddDeletionPrioLabel">Choose which file the SharpFix deletes in case of duplication</string>    
    <string name="subMenuFddRadioOlder">Delete the older file among the two duplicate files</string>    
    <string name="subMenuFddRadioNewer">Delete the newer file among the two duplicate files</string>    
    <string name="checkBoxFD">Enable File Designation</string>    
    <string name="checkBoxFDLabel">Automatically transfer files of a certain type (*.jpg, *.apk, etc.) to a directory you have specified.</string>    
    <string name="subMenuFdRules">File Designation Rules</string>    
    <string name="subMenuFdRulesLabel">View, create, update or delete file designation rules.</string>    
    <string name="ruleName">Rule Name</string>    
    <string name="ruleDescription">JPG Files</string>    
    <string name="noRules">There are no rules defined yet.</string>    
    <string name="createRule">Create new rule</string>    
    <string name="checkBoxFdFilters">Enable File Designation Filtering</string>  
    <string name="checkBoxFdFiltersLabel">Automatically skips the files and/or directories (including subdirectories) you have specified whenever SharpFix performs File Designation scans.</string>    
    <string name="checkBoxFddFilters">Enable File Duplication Detection Filtering</string>    
    <string name="checkBoxFddFiltersLabel">Automatically skips the files and/or directories (including subdirectories) you have specified whenever SharpFix performs File Duplication Detection scans.</string>    
    <string name="subMenuFdFiltersRules">File Designation Filter Rules</string> 
    <string name="subMenuFdFiltersRulesLabel">View, create, update or delete file designation filtering rules.</string> 
    <string name="subMenuFddFiltersRules">File Duplication Detection Filter Rules</string>    
    <string name="subMenuFddFiltersRulesLabel">View, create, update or delete file duplication detection filtering rules.</string>    
   
    
       <!-- LOGS -->
    <string name="subMenuLogsScanLogs">Scan Logs</string>    
    <string name="subMenuLogsScanLogsLabel">This is for all users. View SharpFix\'s scan logs which includes information regarding
        File Duplication Detection scans, File Designation scans, etc.</string>    
    <string name="subMenuLogsProgressLogs">Progress Logs</string>    
    <string name="subMenuLogsProgressLogsLabel">This is for advanced users. View SharpFix\'s verbose Progress background activity logs</string>    
    <string name="subMenuLogsErrorLogs">Error Logs</string>    
    <string name="subMenuLogsErrorLogsLabel">This is for advanced users. View SharpFix\'s Errors which includes uncaught exceptions on global context.</string>    
    <string name="subMenuLogsEmail">Send Logs via Email</string>    
    <string name="subMenuLogsEmailLabel">When internet connection has been detected to be available upon SharpFix initialization, this email will receive
        the three logs created by SharpFix as file attachments.</string>    
    
   
   
    
    
    <string name="checkBoxServices">Enable SharpFix Scheduled Scan</string>    
    <string name="checkBoxServicesLabel">Automatically scans the SD Card every time at the specific time you have set. </string>    
    <string name="subMenuServucesSSS">Scheduled Scan Settings</string>    
    <string name="subMenuServucesSSSLabel">Settings on SharpFix\'s behavior when performing Scheduled Scans</string>    
    <string name="checkBoxAutoUpdate">Enable Automatic Updates</string>    
    <string name="checkBoxAutoUpdateLabel">Automatically updates SharpFix file signature definitions as well as version other fixes provided by the developer</string>    
    
    <!--  Scheduled Scan Settings SubMenu -->
    <string name="sssUpdateSelection1">Time</string>    
    <string name="sssUpdateLabel1">12:53 PM</string>    
    <string name="sssUpdateSelection2">Repeat</string>   
    <string name="sssUpdateLabel2">Friday</string>    
    <string name="sssUpdateSelection3">Check for Latest File Signature Definitions Before Initializing Scheduled Scan</string>    
    <string name="sssUpdateLabel3">If Internet connection is available, SharpFix checks for the latest file signature definitions to be used by File Designation Scan before initializing the said scheduled scan.</string>    
    <string name="sssUpdateSelection4">Enable Scheduled Scan Notifications</string>    
    <string name="sssUpdateLabel4">SharpFix gives User Notifications when starting Scheduled Scans</string>    
    <string name="sssUpdateSelection5">Direct Scan Controls</string>    
    <string name="sssUpdateLabel5">Controls the scan behavior directly such as manually stopping or starting a scan</string>    
    <string name="sssUpdateSelection6">Logs</string>    
    <string name="sssUpdateLabel6">View logged information regarding SharpFix\'s background activities.</string>    
    
    <!--   -->
    <string name="directScanControlsSelection1">Start Scan Now</string>    
    <string name="directScanControlsSelection2">Stop Scan</string>    
    
    
    <!-- Create New Rule Dialog -->
    <string name="ruleNameHint">Specify Rule Name Here</string>    
    <string name="chooseFileTypeLabel">Target File Type: </string>    
    <string name="chooseFileTypeButton">Choose File Type</string>    
    <string name="targetDesignationDir">Target Designation Directory: </string>    
    <string name="chooseDesignationDir">Browse</string>    
    <string name="positiveButton">Create</string>    
    <string name="negativeButton">Cancel</string>    
    
    <!-- Create New Rule Dialog -->
    <string name="chosenFilter">Item(s) to be filtered: </string>    
    <string name="chooser">Browse</string>    
    
    <!-- Rule Dialog Menu -->
    <string name="editRule">Edit Rule</string>    
    <string name="deleteRule">Delete Rule</string>    
    
    
    <!-- Create New Rule Dialog -->
    
    <string name="test1">Popup Window will display on this Activity</string>    
    
    
    <!--  Rules Sub Menu-->
    
    
    <!--  Dev Mode Menu -->
    <string name="titleVolumes">Active and Mounted Volumes Detection</string>    
    <string name="titleDatabase">Database Functions</string>    
    
    
    <!-- About -->
    <string name="currentVersion"><a href="https://github.com/idclxvii/SharpFixAndroid">https://github.com/idclxvii/SharpFixAndroid</a></string>    
    <string name="GNU"><a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a></string>    
    
    
    <!--  DUMMY (Automatically Edited On Java Files) -->
    <string name="loading">Loading ...</string>
    <string name="dummy">Dummy Text Here . . .</string>
    <string name="blankdummy"></string>
    
</resources>
