<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools" 
	    android:background="#000000">
	<RelativeLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	   
		<EditText
	        android:id="@+id/ruleName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:hint="@string/ruleNameHint"
	        android:layout_margin="5dp"
	        android:gravity="center"
	        android:textColor="#4b8c88"
	        />
		
		<TextView
		    android:id="@+id/chosenFilter"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/ruleName"
		    android:clickable="true"
		    android:gravity="left"
		    android:padding="5dp"
		    android:text="@string/chosenFilter"
		    android:textSize="20sp"
		    android:textStyle="bold" />

		<Button
		    android:id="@+id/chooser"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/chosenFilter"
		    android:layout_alignParentLeft="true"
		    android:text="@string/chooser" />
		<Button
		    android:id="@+id/positiveButton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/chooser"
		    android:layout_alignParentLeft="true"
		    android:text="@string/positiveButton" />
		<Button
		    android:id="@+id/negativeButton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/positiveButton"
		   	android:text="@string/negativeButton" />
	</RelativeLayout>
</ScrollView>
