<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools" 
	    android:background="#000000">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	   
		<TextView
	        android:id="@+id/title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/mainMenuServicesSelection"
	        android:textSize="30sp" 
	        android:textStyle="bold"
	        android:textColor="#FFFFFF"
	        >
	    </TextView>
	    <View
	        android:id="@+id/filters_hr1"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/title"
            android:background="#c0c0c0"/>
		<View
		    android:id="@+id/filters_hr2"
             android:layout_width="fill_parent"
             android:layout_height="0.5dp"
             android:layout_below="@+id/filters_hr1"
             android:background="#c0c0c0"/>
	    
	    <CheckBox
	        android:id="@+id/services_selection1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/filters_hr2"
	        android:text="@string/checkBoxServices"
	        android:textSize="20sp" 
	        android:textStyle="bold"
	        android:clickable="true"
	        android:textColor="@color/text_selector"
	        android:background="@color/background_selector"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingRight="5dp"
	        
	        >
	    </CheckBox>
	
	    <TextView
	        android:id="@+id/services_label1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/services_selection1"
	        android:text="@string/checkBoxServicesLabel"
	        android:textSize="15sp" 
	        android:textColor="@color/text_selector_labels"
	        android:textStyle="italic"
	        android:padding="10dp" />
	 <View
	     	android:id="@+id/services_hr3"
             android:layout_width="fill_parent"
             android:layout_height="0.5dp"
             android:layout_below="@+id/services_label1"
             android:background="#c0c0c0"/>
	    
	<!-- INSERT HERE -->
	 <TextView
	        android:id="@+id/services_selection2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/services_hr3"
	        android:text="@string/subMenuServucesSSS"
	        android:textSize="20sp" 
	        android:textStyle="bold"
	        android:clickable="true"
	        android:textColor="@color/text_selector"
	        android:background="@color/background_selector"
	        android:padding="5dp"
	        >
	    </TextView>
	   <TextView
	        android:id="@+id/services_label2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/services_selection2"
	        android:text="@string/subMenuServucesSSSLabel"
	        android:textSize="15sp" 
	        android:textColor="@color/text_selector_labels"
	        android:textStyle="italic"
	        android:padding="10dp" />
	 <View
	     	android:id="@+id/services_hr4"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/services_label2"
            android:background="#c0c0c0"/>
	
	 <CheckBox
	        android:id="@+id/services_selection3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/services_hr4"
	        android:text="@string/checkBoxAutoUpdate"
	        android:textSize="20sp" 
	        android:textStyle="bold"
	        android:clickable="true"
	        android:textColor="@color/text_selector"
	        android:background="@color/background_selector"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingRight="5dp"
	       
	        >
	    </CheckBox>
	    <TextView
	        android:id="@+id/services_label3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/services_selection3"
	        android:text="@string/checkBoxAutoUpdateLabel"
	        android:textSize="15sp" 
	        android:textColor="@color/text_selector_labels"
	        android:textStyle="italic"
	        android:padding="10dp" />
	
	     
	     <View
	        android:id="@+id/services_hr5"
	        android:layout_width="fill_parent"
	        android:layout_height="0.5dp"
	        android:layout_below="@+id/services_label3"
	        android:background="#c0c0c0" />

	      <TextView
	        android:id="@+id/services_selection4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/services_hr5"
	        android:text="@string/sssUpdateSelection5"
	        android:textSize="20sp" 
	        android:textStyle="bold"
	        android:clickable="true"
	        android:textColor="@color/text_selector"
	        android:background="@color/background_selector"
	        android:padding="5dp"
	        >
	    </TextView>
	   <TextView
	        android:id="@+id/services_label4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/services_selection4"
	        android:text="@string/sssUpdateLabel5"
	        android:textSize="15sp" 
	        android:textColor="@color/text_selector_labels"
	        android:textStyle="italic"
	        android:padding="10dp" />
	 <View
	     	android:id="@+id/services_hr6"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/services_label4"
            android:background="#c0c0c0"/>
	  <TextView
	        android:id="@+id/services_selection5"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/services_hr6"
	        android:text="@string/sssUpdateSelection6"
	        android:textSize="20sp" 
	        android:textStyle="bold"
	        android:clickable="true"
	        android:textColor="@color/text_selector"
	        android:background="@color/background_selector"
	        android:padding="5dp"
	        >
	    </TextView>
	   <TextView
	        android:id="@+id/services_label5"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/services_selection5"
	        android:text="@string/sssUpdateLabel6"
	        android:textSize="15sp" 
	        android:textColor="@color/text_selector_labels"
	        android:textStyle="italic"
	        android:padding="10dp" />
	 
	
	
	     
			
	     
	    
	     
	    
	</RelativeLayout>
</ScrollView>
