<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools" 
	    android:background="#000000">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	   
		<TextView
	        android:id="@+id/title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/subMenuServucesSSS"
	        android:textSize="30sp" 
	        android:textStyle="bold"
	        android:textColor="#FFFFFF"
	        >
	    </TextView>
	    <View
	        android:id="@+id/filters_hr1"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/title"
            android:background="#c0c0c0"/>
		<View
		    android:id="@+id/filters_hr2"
             android:layout_width="fill_parent"
             android:layout_height="0.5dp"
             android:layout_below="@+id/filters_hr1"
             android:background="#c0c0c0"/>
	    
	    <TextView
	        android:id="@+id/sssUpdateSelection1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/filters_hr2"
	        android:text="@string/sssUpdateSelection1"
	        android:textSize="20sp" 
	        android:textStyle="bold"
	        android:clickable="true"
	        android:textColor="@color/text_selector"
	        android:background="@color/background_selector"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingRight="5dp"
	        
	        >
	    </TextView>
	
	    <TextView
	        android:id="@+id/sssUpdateLabel1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/sssUpdateSelection1"
	        android:text="@string/sssUpdateLabel1"
	        android:textSize="15sp" 
	        android:textColor="@color/text_selector_labels"
	        android:textStyle="italic"
	        android:padding="10dp" />
	 <View
	     	android:id="@+id/services_hr3"
             android:layout_width="fill_parent"
             android:layout_height="0.5dp"
             android:layout_below="@+id/sssUpdateLabel1"
             android:background="#c0c0c0"/>
	    
	<!-- INSERT HERE -->
	 <TextView
	        android:id="@+id/sssUpdateSelection2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/services_hr3"
	        android:text="@string/sssUpdateSelection2"
	        android:textSize="20sp" 
	        android:textStyle="bold"
	        android:clickable="true"
	        android:textColor="@color/text_selector"
	        android:background="@color/background_selector"
	        android:padding="5dp"
	        >
	    </TextView>
	   <TextView
	        android:id="@+id/sssUpdateLabel2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/sssUpdateSelection2"
	        android:text="@string/sssUpdateLabel2"
	        android:textSize="15sp" 
	        android:textColor="@color/text_selector_labels"
	        android:textStyle="italic"
	        android:padding="10dp" />
	 <View
	     	android:id="@+id/services_hr4"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/sssUpdateLabel2"
            android:background="#c0c0c0"/>
	
	 <CheckBox
	        android:id="@+id/sssUpdateSelection3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/services_hr4"
	        android:text="@string/sssUpdateSelection3"
	        android:textSize="20sp" 
	        android:textStyle="bold"
	        android:clickable="true"
	        android:textColor="@color/text_selector"
	        android:background="@color/background_selector"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingRight="5dp"
	       
	        >
	    </CheckBox>
	    <TextView
	        android:id="@+id/sssUpdateLabel3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/sssUpdateSelection3"
	        android:text="@string/sssUpdateLabel3"
	        android:textSize="15sp" 
	        android:textColor="@color/text_selector_labels"
	        android:textStyle="italic"
	        android:padding="10dp" />
	
	     
	     <View
	        android:id="@+id/services_hr5"
	        android:layout_width="fill_parent"
	        android:layout_height="0.5dp"
	        android:layout_below="@+id/sssUpdateLabel3"
	        android:background="#c0c0c0" />
 		
 		<CheckBox
	        android:id="@+id/sssUpdateSelection4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/services_hr5"
	        android:text="@string/sssUpdateSelection4"
	        android:textSize="20sp" 
	        android:textStyle="bold"
	        android:clickable="true"
	        android:textColor="@color/text_selector"
	        android:background="@color/background_selector"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingRight="5dp"
	       
	        >
	    </CheckBox>
	    <TextView
	        android:id="@+id/sssUpdateLabel4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/sssUpdateSelection4"
	        android:text="@string/sssUpdateLabel4"
	        android:textSize="15sp" 
	        android:textColor="@color/text_selector_labels"
	        android:textStyle="italic"
	        android:padding="10dp" />
	
	     
	     <View
	        android:id="@+id/services_hr6"
	        android:layout_width="fill_parent"
	        android:layout_height="0.5dp"
	        android:layout_below="@+id/sssUpdateLabel4"
	        android:background="#c0c0c0" />
	    
	    
	</RelativeLayout>
</ScrollView>
