<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools" 
	    android:background="#000000">
<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	      <TextView
		        android:id="@+id/title"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/sssUpdateSelection5"
		        android:textSize="20sp" 
		        android:textStyle="bold"
		        android:clickable="true"
		        android:textColor="@color/text_selector"
		        android:background="@color/background_selector"
		        android:paddingTop="5dp"
		        android:paddingBottom="5dp"
		        android:paddingRight="5dp"
	         />
    	    
   
	        
	     
		        
		   	<Button
		        android:id="@+id/scan"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:text="@string/directScanControlsSelection1"
		        android:textSize="15sp" 
		        android:textColor="@color/text_selector_labels"
		        android:textStyle="italic"
		        android:padding="10dp"
		        android:background="@drawable/start_button"
		        android:layout_margin="10dp"
		        android:layout_below="@+id/title"
		        android:clickable="true"
		         />
		     
		     <Button
		        android:id="@+id/stop"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@+id/scan"
		        android:text="@string/directScanControlsSelection2"
		        android:textSize="15sp" 
		        android:textColor="@color/text_selector_labels"
		        android:textStyle="italic"
		        android:padding="10dp"
		        android:background="@drawable/stop_button"
		        android:layout_margin="10dp"
		        android:clickable="true"
		         />
		     

	</RelativeLayout>
</ScrollView>

